async storage implementation

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,8 @@
 
-spring.rabbitmq.host=eagle.rmq.cloudamqp.com
-spring.rabbitmq.username=ekugffal
-spring.rabbitmq.password=WjkYRYO9YSGq9bnpU2rbLSjXgAeeE9Xe
+# ----------------------------------------
+# AMQP CONFIGURATION PROPERTIES
+# ----------------------------------------
+
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.username=ekugffal
+#spring.rabbitmq.password=WjkYRYO9YSGq9bnpU2rbLSjXgAeeE9Xe
