async storage implementation

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,7 @@ applications:
   services:
   - mutants-mq
   - mutant-scaler
+  - mutants-db
   env:
     CF_STAGING_TIMEOUT: 15
     CF_STARTUP_TIMEOUT: 15
