--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,13 @@ rabbitmq:
   ports:
   - "5672:5672"
   - "15672:15672"
+
+mysql:
+  image: mysql:5.7
+  restart: always
+  ports:
+  - 3306:3306
+  volumes:
+  - ./src/main/resources/database:/docker-entrypoint-initdb.d
+  environment:
+    MYSQL_ROOT_PASSWORD: example
